# katana-cbz

./: .gitignore  pyproject.toml
src/katana_cbz/: filesystem.py  main.py  series.py
