[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "katana-cbz"
version = "0.2.0"
description = "Convert MangaKatana ZIP files to CBZ format"
requires-python = ">=3.14"
dependencies = [
    "cyclopts==4.9.0",
    "rich==14.3.3",
]

[project.scripts]
maz = "katana_cbz.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/katana_cbz"]

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.envs.default]
path = ".venv"
dependencies = [
    "hatch==1.16.5",
    "tqdm==4.67.3",
    "ruff==0.15.6",
]